tests/baselines/reference/multipleDefaultExports04(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
multipleDefaultExports04.ts(1,25): error TS2323: Cannot redeclare exported variable 'default'.
multipleDefaultExports04.ts(1,25): error TS2393: Duplicate function implementation.
multipleDefaultExports04.ts(4,25): error TS2323: Cannot redeclare exported variable 'default'.
multipleDefaultExports04.ts(4,25): error TS2393: Duplicate function implementation.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== multipleDefaultExports04.ts (4 errors) ====
    export default function f() {
                            ~
!!! error TS2323: Cannot redeclare exported variable 'default'.
                            ~
!!! error TS2393: Duplicate function implementation.
    }
    
    export default function f() {
                            ~
!!! error TS2323: Cannot redeclare exported variable 'default'.
                            ~
!!! error TS2393: Duplicate function implementation.
    }